--- a/web-app/lists/templates/home.html
+++ b/web-app/lists/templates/home.html
@@ -1,3 +1,11 @@
 <html>
-    <title>To-Do List</title>
+    <head>
+        <title>To-Do List</title>
+    </head>
+    <body>
+        <h1>To-Do List</h1>
+        <input id="new-item-box" placeholder="insert a new item"/>
+        <table id="todo-list">
+        </table>
+    </body>
 </html>
