--- a/web-app/lists/templates/home.html
+++ b/web-app/lists/templates/home.html
@@ -4,8 +4,12 @@
     </head>
     <body>
         <h1>To-Do List</h1>
-        <input id="new-item-box" placeholder="insert a new item"/>
+        <form method="POST">
+            <input name="new-item" id="new-item-box" placeholder="insert a new item"/>
+            {% csrf_token %}
+        </form>
         <table id="todo-list">
+            <tr><td>1. {{ new_item }}</td></tr>
         </table>
     </body>
 </html>
