--- a/web-app/lists/templates/home.html
+++ b/web-app/lists/templates/home.html
@@ -9,7 +9,9 @@
             {% csrf_token %}
         </form>
         <table id="todo-list">
-            <tr><td>1. {{ new_item }}</td></tr>
+            {% for item in items %}
+                <tr><td>{{ forloop.counter }}. {{ item.text }} </td></tr>
+            {% endfor %}
         </table>
     </body>
 </html>
