--- a/web-app/lists/templates/list.html
+++ b/web-app/lists/templates/list.html
@@ -3,10 +3,15 @@
         <title>To-Do List</title>
     </head>
     <body>
-        <h1>Start your new To-Do List</h1>
+        <h1>To-Do List</h1>
         <form method="POST" action="/">
             <input name="new-item" id="new-item-box" placeholder="insert a new item"/>
             {% csrf_token %}
         </form>
+        <table id="todo-list">
+            {% for item in items %}
+                <tr><td>{{ forloop.counter }}. {{ item.text }} </td></tr>
+            {% endfor %}
+        </table>
     </body>
 </html>
