--- a/web-app/lists/templates/base.html
+++ b/web-app/lists/templates/base.html
@@ -18,6 +18,11 @@
                 <form method="POST" action="{% block form_action %}{% endblock %}">
                     <input class="text-center form-control input-lg" name="new-item" id="new-item-box" placeholder="insert a new item"/>
                   {% csrf_token %}
+                  {% if error %}
+                  <div id="error-message"  class="form-group has-error">
+                    <span class="help-block">{{ error }}</span>
+                  </div>
+                {% endif %}
                 </form>
               </div>
             </div>
@@ -25,8 +30,8 @@
     
           <div class="row">
             <div class="col-md-12 col-md-offset-6">
-                {% block body_content %}
-                {% endblock %}
+              {% block body_content %}
+              {% endblock %}
             </div>
           </div>
     
