--- a/web-app/lists/templates/home.html
+++ b/web-app/lists/templates/home.html
@@ -2,4 +2,4 @@
 
 {% block header_text %}Start your new To-Do List{% endblock %}
 
-{% block form_action %}/list/new{% endblock %}
+{% block form_action %}{% url 'new_list' %}{% endblock %}
