--- a/web-app/lists/templates/list.html
+++ b/web-app/lists/templates/list.html
@@ -2,7 +2,7 @@
 
 {% block header_text %}To-Do List{% endblock %}
 
-{% block form_action %}/list/{{ list.id }}/{% endblock %}
+{% block form_action %}{% url 'view_list' list.id %}{% endblock %}
 
 {% block body_content %}
 <table class="table" id="todo-list">
